# labdaemon

./: .gitignore  README.md  justfile  pyproject.toml
docs/: book.toml
docs/src/: SUMMARY.md  cheat_sheet.md  concepts.md  core_api.md  gui-development.md  idioms.md  introduction.md  magic.md  patterns.md  quick_start.md  server-management.md  server.md  server_api.md  site.webmanifest  usage.md
docs/src/devices/: README.md  advanced-streaming.md  basic-streaming.md  device-basics.md  device-interfaces.md
docs/src/tasks/: README.md  composition.md  device-agnostic-tasks.md  interactive.md  multi-device-coordination.md  streaming.md  task-basics.md
docs/src/tutorial/: README.md  part1_devices.md  part2_tasks.md  part3_streaming.md  part4_add_a_server.md
src/labdaemon/: __init__.py  _version.py  context.py  daemon.py  exceptions.py  handlers.py  utils.py
src/labdaemon/patterns/: __init__.py  gui.py  launcher.py  setup.py
src/labdaemon/server/: __init__.py  client.py  errors.py  managers.py  server.py
src/labdaemon/tests/: test_daemon.py  test_patterns.py  test_server.py
